No errors and wornings

--- a/html_basic/base_index.html
+++ b/html_basic/base_index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
-    <title> The HTML doc </title>
+    <meta charset="UTF-8">
+    <title>Text</title>
 </head>
-<body>
-    Hello World.
-</body>
+<body>Text</body>
+</html>
