--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -13,5 +13,7 @@
     <p> Some people are confortable with C. </p>
     <p> I also enjoy designing html with CSS. </p>
 <p> <img src="https://www.holbertonschool.com/holberton-logo.png" alt="Image"> </p>
+<a href="https://twitter.com/IbrahimSsaka1">Homepage</a>
+<a href="tweets.html">My tweets</a>
 </body>
 </html>
