--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -5,6 +5,6 @@
     <title>Text</title>
 </head>
 <body>
-    <a class="twitter-timeline" href="https://twitter.com/IbrahimSsaka1?ref_src=twsrc%5Etfw">Tweets by IbrahimSsaka1</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <a class="twitter-timeline" href="https://twitter.com/IbrahimSsaka1?ref_src=twsrc%5Etfw">Tweets by IbrahimSsaka1</a> <script async src="https://platform.twitter.com/widgets.js"></script>
 </body>
 </html>
