My HTML webpages at ALX

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -15,5 +15,57 @@
 <p> <img src="https://www.holbertonschool.com/holberton-logo.png" alt="Image"> </p>
 <a href="https://twitter.com/IbrahimSsaka1">Homepage</a>
 <a href="tweets.html">My tweets</a>
+<header>
+    <ul>
+        <li><a href="index.html">go to Homepage</a></li>
+        <li><a href="tweets.html">go to tweeter Homepage</a></li>
+    </ul>
+</header>
+<main>
+    <article>
+        <h3>Content of my webpage</h3>
+        <p>This contain tweets, image, and designs as an HTML nubie.</p>
+    </article>
+    <aside>
+        <p>placeholder to add comment thread later</p>
+    </aside>
+    <article>
+        <h4>This is the table</h4>
+        <table>
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Age</th>
+                    <th>Country</th>
+                </tr>
+            </thead>
+                <tbody>
+                    <tr>
+                        <td>John</td>
+                        <td>25</td>
+                        <td>USA</td>
+                    </tr>
+                    <tr>
+                        <td>Emily</td>
+                        <td>28</td>
+                        <td>Canada</td>
+                    </tr>
+                    <tr>
+                        <td>Micheal</td>
+                        <td>32</td>
+                        <td>Australia</td>
+                    </tr>
+                    <tr>
+                        <td>Sophia</td>
+                        <td>21</td>
+                        <td>UK</td>
+                    </tr>
+                </tbody>
+        </table>
+    </article>
+</main>
+<footer>
+    <p>Made by Ssaka Ibraim - <a href="https://www.facebook.com/ibrahiim.saka" target="_blank">here</a></p>
+</footer>
 </body>
 </html>
